--- a/styles.css
+++ b/styles.css
@@ -536,3 +536,70 @@ main * {
     flex-direction: column;
     gap: 12px;
 }
+
+/* Capabilities */
+
+.capabilities {
+    height: 75vh;
+    padding: 96px;
+    text-align: center;
+
+    font-family: Montserrat, sans-serif;;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.capabilities h5 {
+    font-weight: normal;
+    font-size: 16px;
+    padding: 16px;
+    
+}
+
+
+.capabilities h2 {
+    color: var(--yellow-button);
+    padding-bottom: 16px;
+    font-size: 32px;
+    
+}
+
+.production-values-container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+
+.page-center {
+    margin-left: 192px;
+    width: 100%;
+}
+
+.production-value {
+    border-radius: 50%;
+    width: 25%;
+    aspect-ratio: 1/1;
+    border: 1px solid #d9d9d9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: -48px;
+}
+
+.production-value div h2 {
+    font-weight: 600;
+    font-size: 64px;
+    color: var(--orangish);
+}
+
+.production-value div p {
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.wider-button {
+    gap: 160px;
+}
