--- a/styles.css
+++ b/styles.css
@@ -122,11 +122,6 @@ main * {
     height: calc(100vh - 132px);
 }
 
-.hero {
-    align-items: center;
-    justify-content: center;
-}
-
 
 .hero-text {
     font-family: 'Poppins', sans-serif;
@@ -678,7 +673,7 @@ main * {
 }
 
 .client-section {
-    height: 60vh;
+    height: 75vh;
     padding: 96px;
     text-align: center;
 
@@ -689,7 +684,7 @@ main * {
     justify-content: space-between;
     align-items: center;
 
-    background: var(--nav-col);
+    background: #182336;
 }
 
 .client-section h5 {
@@ -716,13 +711,21 @@ main * {
     margin-top: 24px;
 }
 
-.slider-circle span{
+
+.slider-circle button {
+    all: unset;
     height: 8px;
     width: 8px;
     border-radius: 50%;
-    background-color: #d9d9d9;
+    background-color: #666;
 
 }
+
+.slider-circle button.slider-circle-current {
+    background-color: var(--yellow-button);
+
+}
+
 
 
 .certificate-section {
@@ -754,4 +757,69 @@ main * {
     font-size: 44px;
     font-weight: 700;
     
+}
+
+.gallery-section {
+    height: 90vh;
+    position: relative;
+
+    padding: 120px;
+
+    display: flex;
+
+}
+
+.gallery-bg {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    inset: 0;
+    background-size: cover;
+    background-position: center;
+    opacity: 0.15; 
+    z-index: -1;
+}
+
+
+.gallery-text h2 {
+    color: var(--orangish);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+
+}
+
+.gallery-text {
+    flex: 1;
+
+    display: flex;
+    align-items: center ;
+}
+
+.gallery-text p {
+    padding-right: 96px;
+
+    margin-top: 64px;
+    font-family: 'Montserrat', sans-serif;
+    padding-bottom: 16px;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 500;
+    color: #25214E;
+}
+
+.gallery-images {
+    flex: 2;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 16px;
+}
+
+.gallery-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
 }
