--- a/styles.css
+++ b/styles.css
@@ -801,7 +801,6 @@ main * {
 
     margin-top: 64px;
     font-family: 'Montserrat', sans-serif;
-    padding-bottom: 16px;
     font-size: 16px;
     line-height: 32px;
     font-weight: 500;
@@ -811,15 +810,103 @@ main * {
 .gallery-images {
     flex: 2;
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 16px;
+    display: flex;
+    align-items: center;
 }
 
 .gallery-images img {
-    width: 100%;
-    height: 100%;
+    width: 240px;
+    height: 160px;
     object-fit: cover;
     border-radius: 12px;
+    margin: 12px;
+}
+
+.testimonial-section {
+    height: 100vh;
+    padding: 96px;
+    text-align: center;
+
+    font-family: Montserrat, sans-serif;;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.testimonial-section h2 {
+    font-weight: normal;
+    font-size: 48px;
+    font-weight: 700;
+    color: var(--orangish);
+    
+}
+
+.testimonial-card {
+
+}
+
+.footer-section {
+    height: 75vh;
+    padding: 96px;
+    padding-bottom: 48px;
+    text-align: center;
+
+    font-family: Montserrat, sans-serif;;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
+    background-color: var(--nav-col);
+}
+
+.footer-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 16px; 
+    align-items: start;
+}
+
+.footer-left a {
+    display: flex;
+    text-align: start;
+    align-items: center;
+    gap: 8px;
+    color: white;
+    font-size: 12px;
+}
+
+.footer-left-outer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    height: 100%;
+    border: 5px solid red;
+}
+
+.footer-middle {
+    flex: 2;
+}
+
+.footer-middle-links {
+    display: flex;
+    gap: 32px; 
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-map {
+    flex: 1;
+    height: 284px;
+    width: 284px;
+    border-radius: 12px;
+}
+
+.footer-left-outer > img {
+    height: 48px;
 }
